--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaevento.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaevento.properties
@@ -9,9 +9,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nueva Vigencia Evento
-eliminar=Borrar Vigencia Evento
-duplicar=Duplicar Vigencia Evento
+nuevo=Nuevo Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 #Tabla
 inicial=Fecha Inicial
@@ -65,13 +65,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo evento es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 #RASTRO
 confirmarRastro=La tabla 'VIGENCIASEVENTOS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
 confirmarRastroHistorico=La tabla VIGENCIASEVENTOS tiene rastros historicos, \u00bfDesea continuar?
@@ -80,12 +82,23 @@ errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'VIGENCIASEVENTOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'VIGENCIASEVENTOS' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
 #Watermarks
 puntajeind=Puntaje Ind.
 pciNN=Puntaje Cualitativo Ind.
 puntajegrupalNN=Puntaje Grup.
 pcgNN=Puntaje Cualitativo Grup.
+puntajeI=Puntaje Individual
+puntajeCI=Puntaje Cualitativo Individual
+puntajeG=Puntaje Grupal
+puntajeCG=Puntaje Cualitativo Grupal
+puntajeIcorto=P Individual
+puntajeCIcorto=P.C.Individual
+puntajeGcorto=P Grupal
+puntajeCGcorto=P.C.Grupal
 errorRegNew=Los campos Fecha Inicial y Evento son obligatorios.
 errorFechas=La fecha inicial es menor a 01/01/1900 y/o la fecha final es mayor a la fecha inicial.
 salir=Salir
+infoRegistros=Registros:
+empleado=Empleado:
+codigo=Codigo:
