--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/grupoinfadicional.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/grupoinfadicional.properties
@@ -28,6 +28,7 @@ atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva informaci\u00f3n es necesario adicionar:
+validacionBorrar=No se puede borrar este elemento porque esta relacionado con otra tabla
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Deshacer cambios no guardados
@@ -45,14 +46,14 @@ gia=Grupos Informaciones Adicionales
 buscarG=Buscar Grupo: 
 descripcionG=Descripcion Grupo
 #RASTRO
-confirmarRastro=La tabla 'INFORMACIONESADICIONALES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
-confirmarRastroHistorico=La tabla INFORMACIONESADICIONALES tiene rastros historicos, \u00bfDesea continuar?
+confirmarRastro=La tabla 'GRUPOINFORMACIONESADICIONALES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
+confirmarRastroHistorico=La tabla GRUPOINFORMACIONESADICIONALES tiene rastros historicos, \u00bfDesea continuar?
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'INFORMACIONESADICIONALES' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
+errorObjetosDB=La tabla 'GRUPOINFORMACIONESADICIONALES' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
 #NuevoRegistro
 nuevoregistro=Nuevo Registro
 ingresarnuevo=Ingresar una nueva informaci\u00f3n del empleado
