--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/idioma.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/idioma.properties
@@ -45,14 +45,14 @@ lecturaXX=Lectura
 escrituraX=Escritura %
 escrituraXX=Escritura
 #RASTRO
-confirmarRastro=La tabla 'IDIOMASPERSONAS' tiene rastros para el registro seleccionado, \u00bfDesea continuar?
-confirmarRastroHistorico=La tabla IDIOMASPERSONAS tiene rastros historicos, \u00bfDesea continuar?
+confirmarRastro=La tabla 'IDIOMAS' tiene rastros para el registro seleccionado, \u00bfDesea continuar?
+confirmarRastroHistorico=La tabla IDIOMAS tiene rastros historicos, \u00bfDesea continuar?
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'IDIOMASPERSONAS' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
+errorObjetosDB=La tabla 'IDIOMAS' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
 #Otros
 vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
 lovvacio=No se encontraron resultados con el criterio de busqueda.
@@ -67,6 +67,7 @@ atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo idioma es necesario adicionar:
+validacionBorrar=No se puede borrar este elemento porque esta relacionado con otra tabla
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Deshacer cambios no guardados
