--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/perdireccion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/perdireccion.properties
@@ -1,6 +1,6 @@
 #Tabla arriba y titulo
-titulo=Telefonos
-telefonos=Tel\u00e9fonos donde ubicar al empleado
+titulo=Direcciones
+telefonos=Direcci\u00f3n donde ubicar al empleado
 #Tabla
 fecha=Fecha
 tipodetelefono=Tipo de Tel\u00e9fono
@@ -70,12 +70,15 @@ error=\u00a1Error!
 atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 #RASTRO
-confirmarRastro=La tabla 'TELEFONOS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
-confirmarRastroHistorico=La tabla TELEFONOS tiene rastros historicos, \u00bfDesea continuar?
+confirmarRastro=La tabla 'DIRECCIONES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
+confirmarRastroHistorico=La tabla DIRECCIONES tiene rastros historicos, \u00bfDesea continuar?
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'TELEFONOS' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
+errorObjetosDB=La tabla 'DIRECCIONES' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
 infoRegistros=Registros: 
+empleado=Empleado: 
+codigo=C\u00f3digo: 
+existeDireccion= Ya existe un registro con esa fecha
