--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaeducacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaeducacion.properties
@@ -151,3 +151,9 @@ vencimientoWM=Fecha Vencimiento
 observacionWM=Observacion
 cursoWM=Curso
 tituloWM=Titulo
+infoRegistros=Registros:
+refrescar= Deshacer cambios no guardados
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
+salir=Salir
