--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/proyecto.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/proyecto.properties
@@ -25,6 +25,7 @@ cantidadpersonas=Cantidad Personas
 fechainicio=Fecha Inicio
 fechafinalizacion=Fecha Finalizaci\u00f3n
 descripciondelproyecto=Descripcion del Proyecto
+validacionBorrar=No se puede borrar este elemento porque esta relacionado con otra tabla
 #LOV EMPRESAS
 empresasE=Empresas
 buscarE=Buscar Empresa: 
