--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructura.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructura.properties
@@ -63,10 +63,14 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
-validacionNuevo=Para agregar un nuevo orgranigrama es necesario adicionar:
+validacionNuevo=Los campos C\u00f3digo, Empresa y Estado son Obligatorios.
+validacionCodigoRepetido=El campo Codigo no debe estar repetido.
+validacionFechaRepetida=El campo Fecha no debe estar repetido para la misma Empresa.
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
