--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructuraplanta.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructuraplanta.properties
@@ -27,7 +27,9 @@ duplicar=Duplicar Registro
 rastro=Rastro
 #Dialogos
 rpter=Rastros Para Tablas
-seleccioneH=Seleccione la tabla para generar proceso de rastro Historico
+seleccioneH=Seleccione la tabla para generar proceso de rastro Historico.
+seleccionarTabla=Seleccione una tabla para ingresar registro.
+validacionNuevoEx=Para registrar una Extructura debe seleccionar un Organigrama
 #Dialogos Errores
 errorDatosNullEstructura=Los campos Codigo-Estructura son obligatorios.
 errorFecha=La fecha es menor a 01/01/1900 y/o la fecha se encuentra vacia.
@@ -49,8 +51,19 @@ cantidadCargosControlarActivos=Cargos Activos:
 infoCantidadCargosActivos=Cantidad de cargos por empleado activos a la estructura
 centroCostoNE=Centro Costo: 
 estructuraPadreNE=Estructura Padre: 
+#Nuevo Registro Org
+nuevoregistro=Nuevo Registro
+ingresarnuevo=Ingresar Informaci\u00f3n del Organigrama
+fechaN=Fecha: 
+codigoN=Codigo: 
+empresaN=Empresa: 
+nitN=N.I.T: 
+estadoN=Estado: 
 #Duplicar Registro Estructura
 duplicarregistroE=Duplicar Registro Estructura
+#Duplicar Registro Org
+duplicarregistro=Duplicar Registro
+duplicarinformacion=Ingresar Informaci\u00f3n del Organigrama
 #Editar Organigrama
 editarFechaOrganigramaD=Fecha - Organigrama
 editarCodigoOrganigramaD=Codigo - Organigrama
@@ -103,3 +116,14 @@ errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con s
 errorCodigo=El codigo registrado ya se encuentra en uso por otro registro.
 salir=Salir
 infoRegistro=Registros:
+validacionNuevo=Los campos C\u00f3digo, Empresa y Estado son Obligatorios.
+validacionCodigoRepetido=El campo Codigo no debe estar repetido.
+validacionFechaRepetida=El campo Fecha no debe estar repetido para la misma Empresa.
+#VALORES DE ESTADO
+activo=ACTIVO
+inactivo=INACTIVO
+#LOV EMPRESAS
+empresasEM=Empresas
+buscarEM=Buscar Empresa: 
+nitEM=N.I.T
+nombreEM=Nombre
