--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/legislacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/legislacion.properties
@@ -1,7 +1,7 @@
 #Titulo y Fieldset
 titulo=Legislaci\u00f3n Laboral
-tipo=Tipo de Contrato
-clonar=Clonar Contrato
+tipo=Legislaciones
+clonar=Reproducir Legislaci\u00f3n
 #Toolbar
 guardar=Guardar
 editar=Editar
@@ -10,40 +10,40 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo Contrato
-eliminar=Borrar Contrato
-duplicar=Duplicar Contrato
+nuevo=Nuevo Registro
+eliminar=Eliminar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 #Tabla
 codigo=C\u00f3d..
 descripcion=Descripci\u00f3n
 tipocotizante=Tipo Cotizante
 estado=Estado
-#CLONAR CONTRATO
-contratoaactualizar=Seleccione el contrato a actualizar:
-contratodeorigen=Seleccione el contrato de origen:
+#CLONAR Legislaci\u00f3n
+contratoaactualizar=Seleccione Legislaci\u00f3n a actualizar:
+contratodeorigen=Seleccione Legislaci\u00f3n de origen:
 reproducir=Reproducir
-buscar=Buscar Contrato
+buscar=Buscar Legislaci\u00f3n
 mostrar=Mostrar Todos
-#Nuevo Contrato
-nuevoregistro=Nuevo Contrato
-ingresarnuevo=Ingresar Nuevo Contrato
+#Nueva Legislaci\u00f3n
+nuevoregistro=Nueva Legislaci\u00f3n
+ingresarnuevo=Ingresar Nueva Legislaci\u00f3n
 codigoN=C\u00f3digo: 
 descripcionN=Descripci\u00f3n: 
 tipocotizanteN=Tipo Cotizante: 
 estadoN=Estado: 
 activo=ACTIVO
 inactivo=INACTIVO
-#Duplicar Contrato
-duplicarcontrato=Duplicar Contrato
+#Duplicar Legislaci\u00f3n
+duplicarcontrato=Duplicar Legislaci\u00f3n
 #LOV TIPOS COTIZANTES
 tiposcotizantesTC=Tipos Cotizantes
 buscarTC=Buscar Tipo Cotizante: 
 codigoTC=C\u00f3digo
 descripcionTC=Descripcion 
 #LOV CONTRATOS
-contratosC=Contratos
-buscarC=Buscar Contrato: 
+contratosC=Legislaci\u00f3n
+buscarC=Buscar Legislaci\u00f3n: 
 codigoC=C\u00f3digo
 descripcionC=Descripcion
 #EDITAR
@@ -51,14 +51,14 @@ codigoE=C\u00f3digo
 descripcionE=Descripci\u00f3n
 tipocotizanteE=Tipo Cotizante
 #RASTRO
-confirmarRastro=La tabla 'CONTRATOS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
-confirmarRastroHistorico=La tabla CONTRATOS tiene rastros historicos, \u00bfDesea continuar?
+confirmarRastro=La tabla CONTRATOS = "Legislaci\u00f3nes" tiene rastros para el registro seleccionado, \u00bfdesea continuar?
+cofirmarRastroHistorico=La tabla CONTRATOS = LEGISLACIONES tiene rastros historicos, \u00bfDesea continuar?
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'CONTRATOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla CONTRATOS = LEGISLACIONES no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 #EXPORTAR
 codigoX=Codigo
 descripcionX=Descripcion
@@ -73,18 +73,21 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
-validacionNuevo=Para agregar un nuevo contrato es necesario adicionar:
+validacionNuevo=Los campos Codigo, Descripci\u00f3n y Estado son obligatorios
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 detalle=Detalle de la formula asociada a la legislacion seleccionada
 salir=Salir
 validacionCodigo=El C\u00f3digo que desea ingresar ya est\u00e1 registrado en el sistema
 #HEADER
 codigoH=C\u00f3digo
 #VALIDACIONES
-validacionReproducirContratoClon=D\u00edgite el Contrato a Actualizar
-validacionReproducirContratOrigen=D\u00edgite el Contrato de Origen
+validacionReproducirContratoClon=D\u00edgite la Legislaci\u00f3nes a Actualizar
+validacionReproducirContratOrigen=D\u00edgite la Legislaci\u00f3nes de Origen
+infoRegistro=Registros: 
