--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tiposTrabajadores.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tiposTrabajadores.properties
@@ -15,10 +15,12 @@ refrescar=Deshacer cambios no guardados
 salir=Salir
 #Dialogos
 rpter=Rastros Para Tablas
-seleccione=Seleccione la tabla para generar proceso de rastro
+seleccioneH=Seleccione la tabla para generar proceso de rastro Historico
 #Dialogos Errores
-errorDatosNullTipoContrato=Los campos Codigo - Descripci\u00f3n son obligatorios.
-errorRepetidosTipoContrato=La nueva descripci\u00f3n y Codigo no pueden estar repetidos en otros registros.
+errorDatosNullTipoT=Los campos Codigo - Descripci\u00f3n son obligatorios.
+errorDatosNullVD=Los campos D\u00edas y Fecha de Vigencia son obligatorios.
+errorRepetidosFechas=La nueva Fecha de vigencia no puede estar repetida en otros registros.
+validacionNuevo=Los campos Codigo - Descripci\u00f3n no pueden estar repetidos en otros registros.
 #LOV TIPOS Cotizantes
 tiposCot=Tipos Cotizaciones
 #Dialogos
@@ -46,32 +48,42 @@ PPP=Patron paga pensi\u00f3n
 PPR=Patron paga Retenci\u00f3n
 CSC=Cesantias Sector Construcci\u00f3n
 #Tabla Vigencias
-titulo2=Vigencias Tipo Trabajador
+titulo2=Vigencias D\u00edas Tipo Trabajador
 dias=D\u00edas
 fecha=Fecha
 #Nuevo Registro
+seleccionarTabla=Seleccione una Tabla para Ingresar Registro
+validacionNuevoVD=Para ingresar una vigencia por favor seleccionar un registro de Tipos Trabajadores
 nuevoregistroTT=Nuevo Registro Tipos Trabajadores
 ingresarnuevoTT=Ingresar nueva informaci\u00f3n tipo Trabajador
+nuevoregistroVD=Nuevo Registro Vigencias D\u00edas
+ingresarnuevoVD=Ingresar nueva informaci\u00f3n de Vigencias D\u00edas - tipo Trabajador
 codigoNTT=Codigo:
 descripcionNTT=Descripci\u00f3n:
 factorDNTT=Factor Desalarizaci\u00f3n:
 tipoCotNTT=Tipo Cotizante:
-diasvacNoOrdNTT=Dias vacaciones no ordinarios:
+diasvacNoOrdNTT=D\u00edas vacaciones no ordinarios:
 diasvacNTT=Dias de vacaciones:
 #Duplicar Registro
 duplicarregistroTT=Duplicar Registro Tipos Trabajadores
+duplicarregistroVD=Duplicar Registro Vigencias D\u00edas Tipos Trabajadores
 #Editar Tipos de Trabajadores
-editarCodigoTT=Codigo - Tipo Trabajadores
-editarDescripcionTT=Descripci\u00f3n - Tipo Trabajadores
-editarFactorDNTT=Factor Desalarizaci\u00f3n - Tipo Trabajadores
-editarTipoCotNTT=Tipo Cotizante - Tipo Trabajadores
-editarDiasvacNoOrdNTT=Dias de vacaciones no ordinarios - Tipo Trabajadores
-editarDiasvacNTT=Dias de vacaciones - Tipo Trabajadores
+editarCodigoTT=Codigo - Tipo Trabajador
+editarDescripcionTT=Descripci\u00f3n - Tipo Trabajador
+editarFactorDNTT=Factor Desalarizaci\u00f3n - Tipo Trabajador
+editarTipoCotNTT=Tipo Cotizante - Tipo Trabajador
+editarDiasvacNoOrdNTT=D\u00edas de vacaciones no ordinarios - Tipo Trabajador
+editarDiasvacNTT=D\u00edas de vacaciones - Tipo Trabajador
+editarporcentNTT=Porcentaje - Tipo Trabajador
+editarNivelEnNTT=Nivel de endeudamiento - Tipo Trabajador
+#Editar Vigencias Dias TT
+editarDiasVD=D\u00edas Vigencias D\u00edas - Tipo Trabajador
+editarFechaVD=Fecha Vigencias D\u00edas - Tipo Trabajador
 #Exportar
 tipoTrabajadorX=Tipos de Trabajadores
 tipoTrabajadorXX=Tipos_de_Trabajadores
-codigoXX=Codigo
-descripcionXX=Descripcion
+codigoX=Codigo
+descripcionX=Descripcion
 factorDX=Factor Desalarizaci\u00f3n
 factorDXX=Factor_Desalarizaci\u00f3n
 tipoCotX=Tipo Cotizante
@@ -108,9 +120,9 @@ codigoNClonarTT=Nuevo Codigo
 nombreBClonarTT=Nombre Tipo Trabajador Origen
 clonar=Clonar
 tipoTrabajadorD=Tipos Trabajadores Actuales Para Tomar de Referencia
-errorClonadoTipoT=Los campos Codigo - Nombre del Tipo Trabajador Nuevo y Origen son obligatorios.
+errorClonNulos=Los campos Codigo y Nombre del Tipo Trabajador Nuevo y Origen son obligatorios.
 continuarOperacionClonado=\u00bfContinuar con la operacion de clonado?
-errorCodigoClonado=El codigo nuevo ya existe.
+errorClonRepetidos=Los campos Codigo y Nombre del Nuevo Tipo Trabajador NO deben estar repetidos.
 rastrosH=Rastros Historicos
 #Conteo
 infoRegistro=Registros:
