--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades.properties
@@ -33,7 +33,8 @@ error=\u00a1Error!
 atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
-validacionNuevo=Para agregar una nueva ciudad es necesario adicionar:
+validacionNuevo=Los campos codigo, nombre ciudad y departamento son obligatorios.
+validacionBorrado=La ciudad no se puede borrar porque est\u00e1 siendo usada.
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 refrescar= Deshacer cambios no guardados
 #NuevoRegistro
