--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructura.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructura.properties
@@ -73,7 +73,7 @@ validacionCodigoRepetido=El campo Codigo no debe estar repetido.
 validacionFechaRepetida=El campo Fecha no debe estar repetido para la misma Empresa.
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 #RASTRO
 confirmarRastro=La tabla 'ORGANIGRAMAS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
 confirmarRastroHistorico=La tabla ORGANIGRAMAS tiene rastros historicos, \u00bfDesea continuar?
