--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametro.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametro.properties
@@ -106,11 +106,13 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 ingresarvalorabuscar=Ingresar valor a buscar
