--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto.properties
@@ -15,9 +15,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo Concepto
-eliminar=Borrar Concepto
-duplicar=Duplicar concepto
+nuevo=Nuevo Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 #Otros
 vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
@@ -27,7 +27,9 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo concepto es necesario adicionar:
@@ -36,7 +38,7 @@ validacionNuevoCod2=El codigo que esta tratando de ingresar esta repetido.
 validacioNuevoClon=Para clonar debe seleccionar un concepto existente, e ingresar un nuevo Codigo y Descripcion.
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 #Tabla
 codigo=C\u00f3d..
 descripcion=Descripci\u00f3n
@@ -160,4 +162,4 @@ codigoalternativoTtip=Codigo Alternativo
 #Advertencias
 continuar=continuar
 #Cantidad registros
-registros=Registros:
+infoRegistros=Registros:
