--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaindicador.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaindicador.properties
@@ -18,7 +18,9 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
@@ -33,7 +35,7 @@ errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'VIGENCIASINDICADORES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'VIGENCIASINDICADORES' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
 salir=Salir
 titulo=Historia de Censos
 historicoCenso=Historico Censos
@@ -68,3 +70,6 @@ buscarTI=Buscar Tipo Indicador:
 descripcionTI=Descripcion Tipo Indicador
 descripcionC=Descripcion del Censo
 buscarI=Buscar Indicador: 
+infoRegistros=Registros:
+empleado=Empleado:
+codigo=C\u00f3digo:
