--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/formula.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/formula.properties
@@ -11,9 +11,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nueva Formula
-eliminar=Borrar Formula
-duplicar=Duplicar Formula
+nuevo=Nuevo Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 #Tabla
 nombrelargo=Nombre Largo
@@ -88,14 +88,16 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacioNuevoClon=Para clonar debe seleccionar una formula existente e ingresar nombre corto y nombre Largo.
 validacionNuevo=Para agregar una nueva formula es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardardos
 textP=Indica si la periodicidad es independiente
 salir=Salir
 infoRegistro=Registros:
