--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/perexperiencialaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/perexperiencialaboral.properties
@@ -93,3 +93,6 @@ motivoRetiroXX=Motivo_Retiro
 motivoRetiroX=Motivo Retiro
 logrosXX=Logros_Alcanzados
 logrosX=Logros Alcanzados
+empleado=Empleado:
+codigo=Codigo
+infoRegistros=Registros:
