--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaeducacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaeducacion.properties
@@ -93,7 +93,7 @@ errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'VIGENCIASFORMALES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'VIGENCIASFORMALES' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
 #RASTRONF
 confirmarRastroNF=La tabla 'VIGENCIASNOFORMALES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
 confirmarRastroHistoricoNF=La tabla VIGENCIASNOFORMALES tiene rastros historicos, \u00bfDesea continuar?
@@ -102,7 +102,7 @@ errorRegistroRastroNF=El registro seleccionado no tiene rastros.
 errorTablaConRastroNF=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastroNF=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistroNF=Por favor seleccione un registro.
-errorObjetosDBNF=La tabla 'VIGENCIASNOFORMALES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDBNF=La tabla 'VIGENCIASNOFORMALES' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
 #Exportar
 fechaX=Fecha
 tipoeducacionX=Tipo Educacion
@@ -157,3 +157,5 @@ informacion=Informaci\u00f3n
 error=\u00a1Error!
 atencion=\u00a1Precauci\u00f3n!
 salir=Salir
+empleado=Empleado:
+codigo=C\u00f3digo:
