--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipounidad.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipounidad.properties
@@ -27,14 +27,14 @@ buscarT=Buscar Tipo Unidad:
 codigoT=C\u00f3digo
 nombreT=Nombre
 #RASTRO
-confirmarRastro=La tabla 'UNIDADES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
-confirmarRastroHistorico=La tabla UNIDADES tiene rastros historicos, \u00bfDesea continuar?
+confirmarRastro=La tabla 'TIPOSUNIDADES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
+confirmarRastroHistorico=La tabla TIPOSUNIDADES tiene rastros historicos, \u00bfDesea continuar?
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'UNIDADES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'TIPOSUNIDADES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 #Otros
 vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
 lovvacio=No se encontraron resultados con el criterio de busqueda.
