30 de junio de 2016 Ximena Valero Modificacion pantallas NReporteNomina

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina.properties
@@ -62,15 +62,15 @@ cc=Cc:
 asunto=Asunto: 
 registrodeenvios=Registro de Env\u00edos
 #LOV Empleado Desde
-codigoEMP=Codigo Empleado Desde
+codigoEMP=Empleado Desde
 buscarEMP=Buscar Empleado: 
-codigooEMP=Codigo Empleado
-nombreEMP=Nombre Empleado
+codigooEMP=Codigo
+nombreEMP=Nombre
 #LOV Empleado Hasta
-codigoEMPH=Codigo Empleado Hasta
+codigoEMPH=Empleado Hasta
 buscarEMPH=Buscar Empleado: 
-codigooEMPH=Codigo Empleado
-nombreEMPH=Nombre Empleado
+codigooEMPH=Codigo
+nombreEMPH=Nombre
 #LOV Grupos Conceptos
 gruposGC=Grupos Conceptos
 buscarGC=Buscar Concepto: 
