--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametro.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametro.properties
@@ -116,3 +116,5 @@ cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Deshacer cambios no guardados
 ingresarvalorabuscar=Ingresar valor a buscar
+config=Configuraci\u00f3n del periodo Activo
+infoRegistro=Registros:
