--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedaddefinitivas.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedaddefinitivas.properties
@@ -15,9 +15,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nueva Novedad
-eliminar=Borrar Novedad
-duplicar=Duplicar Novedad
+nuevo=Nuevo Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 #Abajo
 fechaliquidacion=Fecha Liquidaci\u00f3n Definitiva
@@ -85,11 +85,14 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva novedad es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 infoRegistro=Registros:
+salir=Salir
