--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedaddefinitivas.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedaddefinitivas.properties
@@ -75,7 +75,7 @@ errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
-seleccionarRegistro=Por favor seleccione un registro.
+seleccionarRegistro=Por favor seleccione un registro con novedades definitivas.
 errorObjetosDB=La tabla 'NOVEDADESSISTEMA' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 #Otros
 vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
