--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado.properties
@@ -9,9 +9,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nueva Novedad
-eliminar=Borrar Novedad
-duplicar=Duplicar Novedad
+nuevo=Nuevo Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 empleados=Empleados
 cpd=Conceptos de pago y/o descuento
@@ -35,7 +35,7 @@ aceptar=Aceptar
 atras=Atras
 todas=Todas las Novedades
 actuales= Novedades Actuales
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 nuevoregistro= Nuevo Registro
 duplicarregistro= Duplicar Registro
 ingresarnueva= Ingresar una nueva Novedad
@@ -43,7 +43,9 @@ limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
 salir=Salir
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 validacionNuevo=Para agregar una nueva novedad es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 si=Si
