--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/comprobante.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/comprobante.properties
@@ -76,3 +76,22 @@ salir=Salir
 estructuraFormula=Estructura de la F\u00f3rmula
 infoRegistros=Registros: 
 seleccionarRegistro=Por favor seleccione un Registro
+###### DIALOGOS EDITAR###
+codigoConcepto=C\u00f3digo
+descConcepto=Descripci\u00f3n
+und=Unidades
+pago=Pago
+descuento=Descuento
+pasivo=Pasivo
+gasto=Gasto
+tercero=Nombre del Tercero
+fechahasta=Fecha Hasta
+fechadesde=Fecha Desde
+debito=D\u00e9bito
+credito=Cr\u00e9dito
+ccosto=Centro de Costo C
+dcosto=Centro de Costo D
+saldo=Saldo
+fechapago=Fecha Pago
+fechamodificacion=Fecha Modificaci\u00f3n
+
