--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado.properties
@@ -16,23 +16,23 @@ rastro=Rastro
 empleados=Empleados
 cpd=Conceptos de pago y/o descuento
 concepto=Concepto
-dConcepto=Descripcion Concepto
+dConcepto=Descripci\u00f3n Concepto
 inicial=Inicial
 final=Final
 vaalor=Valor
 saldo=Saldo
-coodigo=Codigo
-periodicidad=Descripcion Periodicidad
+coodigo=C\u00f3digo
+periodicidad=Descripci\u00f3n Periodicidad
 nit=N.I.T
 tercero=Nombre del Tercero
-formula=Formula
-horasdias=Horas/Dias
+formula=F\u00f3rmula
+horasdias=Horas/D\u00edas
 minutoshoras=Minutos/Horas
 tipo=Tipo
 buscar=Buscar Empleado
 mostrar=Mostrar Todos
 aceptar=Aceptar
-atras=Atras
+atras=Atr\u00e1s
 todas=Todas las Novedades
 actuales= Novedades Actuales
 refrescar= Deshacer cambios no guardados
@@ -52,66 +52,66 @@ si=Si
 no=No
 inconsistencia=La fecha inicial de una Novedad no puede ser menor a la fecha de ingreso del Empleado.
 fecha=La fecha inicial de una Novedad no puede ser menor a la fecha final de la misma.
-descripcion=Descripcion
+descripcion=Descripci\u00f3n
 sFormulas=El registro se encuentra en la tabla SOLUCIONES FORMULAS, no se puede eliminar.
-cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
+cambio=A\u00fan hay cambios sin guardar, \u00bfDesea guardar los cambios?
 confirmarRastro=La tabla 'NOVEDADES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
-confirmarRastroHistorico=La tabla NOVEDADES tiene rastros historicos, \u00bfDesea continuar?
-errorRastroHistorico=La tabla no tiene rastros historicos.
+confirmarRastroHistorico=La tabla NOVEDADES tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
+errorRastroHistorico=La tabla no tiene rastros hist\u00f3ricos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'NOVEDADES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'NOVEDADES' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
 period=Periodicidad
 ter=Terceros
-vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
-lovvacio=No se encontraron resultados con el criterio de busqueda.
+vacio=No se encontraron resultados para la b\u00fasqueda
+lovvacio=No se encontraron resultados con el criterio de b\u00fasqueda.
 #Exportar
 conceptoE=Concepto
-dConceptoE=Descripcion_Concepto
+dConceptoE=Descripci\u00f3n_Concepto
 inicialE=Fecha_Inicial
 finalE=Fecha_Final
 vaalorE=Valor
 saldoE=Saldo
 coodigoE=Codigo
-periodicidadE=Descripcion_Periodicidad
+periodicidadE=Descripci\u00f3n_Periodicidad
 nitE=N.I.T
 terceroE=Nombre_del_Tercero
-formulaE=Formula
-horasdiasE=Horas/Dias
+formulaE=F\u00f3rmula
+horasdiasE=Horas/D\u00edas
 minutoshorasE=Minutos/Horas
 tipoE=Tipo
 btnAcumuladoNovedad=Acumulado por Novedad
 #NUEVO
 conceptoN=Concepto: 
-descripcionconceptoN=Descripcion Concepto: 
+descripcionconceptoN=Descripci\u00f3n Concepto: 
 fechainicialN=Fecha Inicial: 
 fechafinalN=Fecha Final: 
 valorN=Valor: 
 saldoN=Saldo: 
-codigoN=Codigo: 
-descripcionperiodicidadN=Descripcion Periodicidad: 
+codigoN=C\u00f3digo: 
+descripcionperiodicidadN=Descripci\u00f3n Periodicidad: 
 nitN=N.I.T: 
 nombredelterceroN=Nombre del Tercero: 
-formulaN=Formula: 
-horasdiasN=Horas/Dias: 
+formulaN=F\u00f3rmula: 
+horasdiasN=Horas/D\u00edas: 
 minutoshorasN=Minutos/Horas: 
 tipoN=Tipo: 
 #LOV FORMULA
-formulasF=Formulas
-buscarF=Buscar Formula: 
+formulasF=F\u00f3rmulas
+buscarF=Buscar F\u00f3rmula: 
 nombreF=Nombre
 #LOV CONCEPTOS
 conceptosC=Conceptos
 buscarC=Buscar Concepto: 
-codigoC=Codigo
-descripcionC=Descripcion
+codigoC=C\u00f3digo
+descripcionC=Descripci\u00f3n
 nombreC=Nombre
 #LOV PERIODICIDAD
 periodicidadesP=Periodicidades
 buscarP=Buscar Periodicidad: 
-codigoP=Codigo
+codigoP=C\u00f3digo
 nombreP=Nombre
 #LOV TERCEROS
 tercerosT=Terceros
@@ -122,6 +122,6 @@ nombreT=Nombre
 empleadosE=Empleados
 buscarE=Buscar Empleado: 
 nombreE=Nombre
-codigoE=Codigo
+codigoE=C\u00f3digo
 tipoE=Tipo
 infoRegistro=Registros:
