--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadplano.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadplano.properties
@@ -73,7 +73,7 @@ informacion=Informaci\u00f3n
 nce=Novedades Cargadas Exitosamente
 registroscargados=Registros Cargados (
 error=Error
-errorExtencionArchivo=Extensi\u00f3n de archivo invalida, solo se permiten archivos con extensi\u00f3n .prn 
+errorExtensionArchivo=Extensi\u00f3n de archivo invalida, solo se permiten archivos con extensi\u00f3n .prn 
 documentoNoExiste=El nombre del documento soporte ingresado, no existe. Verifique mayusculas y minusculas.
 reversarFallo=No se pudo reversar las novedades, ya que hay novedades liquidadas.
 exito=Exito
@@ -120,7 +120,8 @@ atras=Atras
 validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
+salir=Salir
 errores=ERRORES: 
 reversarcarguenovedades=Reversar Cargue Novedades
 #Toolbar
@@ -163,3 +164,4 @@ editarTercero=Tercero
 editarSaldo=Saldo
 editarUEntera=Unidad Entera
 editarUFraccion=Unidad Fraccion
+infoRegistro=Registros:
