--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
@@ -273,3 +273,35 @@ operacionProceso=Operacion en proceso. Por favor espere...
 nit=NIT
 errorEmailPersona=El email ingresado es incorrecto.
 infoRegistro=Registros:
+#T\u00edtulos de los LOV
+seleccionempresa=Seleccione una Empresa
+ingresetd=Seleccione el Tipo de Documento
+ingreseciudadtd=Seleccione la Ciudad de Expedici\u00f3n del Documento
+ingreseciudadna=Seleccione la Ciudad de Nacimiento
+nombrecargo=Seleccione el nombre del Cargo
+motivocargo=Seleccione el motivo del Cargo
+estructuracargo=Seleccione la estructura del Cargo
+papeldesem=Seleccione el Papel Desempe\u00f1ado
+empleadojefe=Seleccione el Empleado Jefe
+motivolocalizacion=Seleccione el motivo de Ingreso
+estructuracc=Seleccione el Centro de Costo
+tipotrabajador=Seleccione el Tipo de Trabajador
+tiposalarios=Seleccione el Tipo de Salario
+motivosueldo=Seleccione el Motivo del Sueldo
+tipocompensacion=Seleccione el tipo de Compensaci\u00f3n
+ingreseunidad=Seleccione la Unidad
+motivocontrato=Seleccione el motivo del Contrato
+tipocontrato=Seleccione el tipo de Contrato
+normalaboral=Seleccione la Norma Laboral
+legislaboral=Seleccione la Legislaci\u00f3n Laboral
+ubgeografica=Seleccione la Ubicaci\u00f3n Geogr\u00e1fica
+jornadala=Seleccione la Jornada Laboral
+formapago=Seleccione la forma de Pago
+sucursalPago=Seleccione la sucursal de pago
+metodopago=Seleccione el m\u00e9todo de pago
+selecciontercero=Por favor seleccione una Entidad de Afiliaci\u00f3n a 
+ciudadresidencia=Seleccione la ciudad de Residencia
+estadocivil=Seleccione el Estado Civil
+tipotelefono=Seleccione el Tipo de Tel\u00e9fono
+ciudadtelefono=Seleccione la Ciudad del Tel\u00e9fono
+
